prevent overflow

--- a/client/src/App.modules.css
+++ b/client/src/App.modules.css
@@ -2,22 +2,27 @@
   padding: 1%;
   position: absolute;
   z-index: 3;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .default-background {
   background-color: rgb(50, 54, 57);
   height: 100%;
-  width:100%;
+  width:100vw;
   position: relative;
   z-index: -3;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .background-img {
   position: absolute;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   z-index: -1;
   opacity: 85%;
+  object-fit: cover;
 }
